objects/APTS_ABB_Integration_Master__c.object
<CustomObject>
    <description>Holds master data (like source system, target system, class name, etc..) for each integration</description>
    <fields>
        <fullName>APTS_Brief_Description__c</fullName>
        <description>Brief description about this integration.</description>
        <inlineHelpText>Brief description about this integration.</inlineHelpText>
        <label>Brief Description</label>
        <length>200</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>APTS_Endpoint__c</fullName>
        <description>Location (URI) of webservice</description>
        <label>Endpoint</label>
        <length>150</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>APTS_Implementation_Class__c</fullName>
        <description>Class involved during integration</description>
        <label>Implementation Class</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>APTS_Integration_Identifier__c</fullName>
        <description>To identify systems involved</description>
        <label>Integration Identifier</label>
        <length>20</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>APTS_Log_Messages__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Log Messages</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>APTS_Logs_Retention_Days__c</fullName>
        <description>No of days to persist transaction logs</description>
        <inlineHelpText>No of days to persist transaction logs</inlineHelpText>
        <label>Logs Retention Days</label>
        <precision>3</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>APTS_No_of_Retries__c</fullName>
        <description>No. of times a transaction be attempted after receiving error as a result of webservice callout</description>
        <label>No. of Retries</label>
        <precision>2</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>APTS_Notify_User__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Should users be notified if errors are encountered</description>
        <label>Notify User</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>APTS_Operation_Name__c</fullName>
        <description>Unique identifier to indicate operation carried out by user</description>
        <label>Operation Name</label>
        <length>30</length>
        <type>Text</type>
        <unique>true</unique>
    </fields>
    <fields>
        <fullName>APTS_Password__c</fullName>
        <description>Password (i.e. authorization credentials) to access webservice</description>
        <label>Password</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>APTS_Point_of_Contact_Email__c</fullName>
        <description>The email of the primary contact who owns this integration from external system.</description>
        <label>Primary Contact Email</label>
        <type>Email</type>
    </fields>
    <fields>
        <fullName>APTS_Point_of_Contact_Name__c</fullName>
        <description>The name of the person from external system who is the primary point of contact for this integration.</description>
        <label>Point of Contact Name</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>APTS_Retry_Interval__c</fullName>
        <description>Attempt to make call out (in case of failure) after an interval indicated by Retry Interval</description>
        <label>Retry Interval</label>
        <length>30</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>APTS_Source_System__c</fullName>
        <description>Source (Request Sender) System</description>
        <label>Source System</label>
        <picklist>
            <picklistValues>
                <fullName>ActiveDocs</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>BOL</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>CCI</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>ERP-LN</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Market Allocation</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Nextra ERP</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Offering Tree</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>OMS</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>ServIS</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>SPINE</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>APTTUS</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>APTS_Target_System__c</fullName>
        <description>Target System (Request Receiver)</description>
        <label>Target System</label>
        <picklist>
            <picklistValues>
                <fullName>ActiveDocs</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>BOL</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>CCI</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>ERP-LN</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Market Allocation</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Nextra ERP</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Offering Tree</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>OMS</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>ServIS</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>SPINE</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Technical Data</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>APTTUS</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>APTS_Username__c</fullName>
        <description>Username (i.e. credentials) to access webservice</description>
        <label>Username</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>APTS_Users_to_be_notified__c</fullName>
        <description>List all user&apos;s to be notified if an error is encountered</description>
        <label>Users to be notified</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>APTS_isActive__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Flag used to indicate if an integration is active or disabled</description>
        <label>isActive</label>
        <type>Checkbox</type>
    </fields>
    <label>Integration Repository</label>
    <listViews>
        <fullName>All</fullName>
        <columns>NAME</columns>
        <columns>APTS_Operation_Name__c</columns>
        <columns>APTS_Source_System__c</columns>
        <columns>APTS_Target_System__c</columns>
        <columns>APTS_Endpoint__c</columns>
        <columns>APTS_Brief_Description__c</columns>
        <columns>APTS_Implementation_Class__c</columns>
        <columns>APTS_isActive__c</columns>
        <filterScope>Everything</filterScope>
        <label>All</label>
        <language>en_US</language>
    </listViews>
    <listViews>
        <fullName>All1</fullName>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <nameField>
        <label>Integration Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Integration Repository</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>